--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,6 @@ script:
   - cd application
   - composer install --prefer-source
   - ./vendor/bin/phpunit
+after_script:
+  - cd application
+  - php vendor/bin/coveralls -v
