--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
     "phpunit/phpunit": "~4.0",
     "phpspec/phpspec": "~2.1",
     "barryvdh/laravel-ide-helper": "2.*",
-    "satooshi/php-coveralls": "*@stable",
-    "doctrine/dbal": "~2.3"
+    "doctrine/dbal": "~2.3",
+    "satooshi/php-coveralls": "dev-master"
   },
   "autoload": {
     "classmap": [
