--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -16,11 +16,13 @@ checks:
     code_rating: true
     duplication: true
 build:
+  dependencies:
+    before:
+      - sudo apt-get update
+      - 'npm cache clean'
   environment:
     php: '5.6.9'
   tests:
-    before:
-      - 'npm cache clean'
     override:
       -
         command: 'php vendor/bin/phpunit --coverage-clover=tests/build/clover.xml'
