--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,5 @@ script:
   - ./vendor/bin/phpunit
 after_script:
   - php vendor/bin/coveralls -v
+  - wget https://scrutinizer-ci.com/ocular.phar
+  - php ocular.phar code-coverage:upload --format=php-clover tests/build/clover.xml
