--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,13 @@ php:
     - 5.5
     - 5.6
     - hhvm
+services: sqlite3
 before_script:
     - composer self-update
 script:
     - composer install --prefer-source
     - ./vendor/bin/phpunit
+    - ./vendor/bin/phpspec run -v
 after_script:
     - php vendor/bin/coveralls -v
     - wget https://scrutinizer-ci.com/ocular.phar
