--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,15 @@ before_script:
     - composer self-update
 script:
     - composer install --prefer-source
+    - chmod -R 777 tests/build
     - ./vendor/bin/phpunit
     - ./vendor/bin/phpspec run -v
+    - touch storage/codeception.sqlite
+    - php artisan migrate --database=codeception
+    - php artisan serve
+    - ./vendor/bin/codecept build
+    - ./vendor/bin/codecept run --steps
 after_script:
     - php vendor/bin/coveralls -v
     - wget https://scrutinizer-ci.com/ocular.phar
-    - php ocular.phar code-coverage:upload --format=php-clover tests/build/clover.xml
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.5" ]]; then php ocular.phar code-coverage:upload --format=php-clover tests/build/clover.xml; fi
