--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
     "phpspec/phpspec": "~2.1",
     "barryvdh/laravel-ide-helper": "2.*",
     "doctrine/dbal": "~2.3",
-    "satooshi/php-coveralls": "dev-master"
+    "satooshi/php-coveralls": "dev-master",
+    "codeception/codeception": "2.0.14"
   },
   "autoload": {
     "classmap": [
