--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ before_script:
     - composer self-update
 script:
     - composer install --prefer-source
+    - php -r "copy('.env.example', '.env');"
     - chmod -R 777 tests/build
     - ./vendor/bin/phpunit
     - ./vendor/bin/phpspec run -v
