--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,6 @@ script:
     - ./vendor/bin/phpunit
     - ./vendor/bin/phpspec run -v
 after_script:
-    - php vendor/bin/coveralls -v
+    - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.5" ]]; then php vendor/bin/coveralls -v; fi
     - wget https://scrutinizer-ci.com/ocular.phar
     - if [[ ${TRAVIS_PHP_VERSION:0:3} == "5.5" ]]; then php ocular.phar code-coverage:upload --format=php-clover tests/build/clover.xml; fi
